force-app/main/default/objects/cpm__Transaction_Sub_Element__c/cpm__Transaction_Sub_Element__c.object-meta.xml
<CustomObject>
    <label>Transaction Sub Element</label>
    <nameField>
        <displayFormat>TSE-{0}</displayFormat>
        <label>Transaction Sub Element Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Sub Elements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>