force-app/main/default/objects/cpm__Transaction_Sub_Element__c/fields/cpm__Actual_Amount__c.field-meta.xml
<CustomField>
    <fullName>cpm__Actual_Amount__c</fullName>
    <formula>if ( ISPICKVAl( cpm__Credit_Debit__c, &quot;Debit&quot;), cpm__Amount__c * -1 , cpm__Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>