force-app/main/default/objects/cpm__Transaction_Sub_Element__c/fields/cpm__Party__c.field-meta.xml
<CustomField>
    <fullName>cpm__Party__c</fullName>
    <label>Party</label>
    <length>255</length>
    <type>Text</type>
</CustomField>