force-app/main/default/objects/cpm__Transaction_Sub_Element__c/fields/cpm__ProcessingHub_Id__c.field-meta.xml
<CustomField>
    <fullName>cpm__ProcessingHub_Id__c</fullName>
    <externalId>true</externalId>
    <label>ProcessingHub Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>