force-app/main/default/objects/cpm__Transaction_Sub_Element__c/fields/cpm__Type__c.field-meta.xml
<CustomField>
    <fullName>cpm__Type__c</fullName>
    <label>Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>